[tool.poetry]
name = "craftslab"
version = "0.1.0"
description = ""
authors = ["kuldeep  jeengar <kuldeepjeengar50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
markdown = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
